@@ -8,6 +8,7 @@ version 0.9-trunk:
 	- configure: set -DNO_NATIVE_UNALIGNED_MOVES for platforms
 	  other than x86
 	- removed 'include <malloc.h>' from cp-demangle.c
+	- fixed a buffer overflow in htperes.cc
 
 version 0.8.0:
 	- g++ v3 abi demangler
